# caf-net-benchmarks

./: .RData  .gitignore  CMakeLists.txt  README.md  bench.sh  configure  local_bench.sh  local_bench_pingpong_multiple.sh  local_bench_pingpong_multiple_alloc.sh  pingpong_benchmark.sh  pingpong_net  python-steps.txt  requirements.txt  simple_benchmark.sh  simple_benchmark_mpx.sh
benchmark/: blank_streaming.sh  caf_streaming.sh  pingpong.sh  pingpong_regression.sh  raw.sh  run_all.sh  streaming.sh  timing.sh
cmake/: FindCAF.cmake  FindCAF_NET.cmake
evaluation/: 0-fixed-workers.R  4-fixed-workers.R  blank_streaming.py  blank_streaming_message_size.R  current_interface_load.sh  deserialization-workers-bytes.R  deserialization-workers-mpx.R  deserialization-workers.R  dröselung.py  human_readable.R  interface_load.sh  merge_logs.sh  out.csv  pingpong-multiple-1-pings-0-workers.R  pingpong-multiple-10-alloc.R  pingpong-multiple-10-pings-60.R  pingpong-multiple-10-pings.R  pingpong-multiple-100-alloc.R  pingpong-multiple-100-pings-0-workers.R  pingpong-multiple-100-pings-60.R  pingpong-multiple-100-pings.R  pingpong-multiple-60.R  pingpong-multiple-alloc.R  pingpong-multiple.R  pingpong-net-udp-1-pings-1.out  pingpong-net-udp-10-pings.out  pingpong-net-udp-100-pings.out  pingpong-no-io.R  pingpong-timing-recv.R  pingpong-timing-send.R  pingpong-timing.R  pingpong-waiting-no-io.R  pingpong-waiting.R  pingpong.R  pingpong.py  pingpong_net_regression.R  pingpong_tcp.R  pingpong_tcp_message_sizes.R  pingpong_udp.py  recv_timing_io_processed.out  (+10 more)
evaluation-old/: interface_load.sh  pingpong-multiple-10-pings-0-workers.R  pingpong-multiple-10-pings-60.R  pingpong-multiple-100-pings-60.R  pingpong-multiple-100-pings.R  pingpong-multiple.R  pingpong-timing-no-io.R  pingpong-timing-send.R  stack-recv-timing.R  streaming-60.R  streaming.R  timing-bargraphs.R
evaluation-old/results-evening/: pingpong-io-10-pings
evaluation/data/: pingpong-1-ping-poll-io.out  pingpong-1-ping-single-buf-fetch-1-net.out  pingpong-1-ping-single-buf-fetch-20-net.out  pingpong-10-ping-single-buf-fetch-1-net.out  pingpong-10-ping-single-buf-fetch-20-net.out  pingpong-10-pings-vec.out  pingpong-100-ping-single-buf-fetch-1-net.out  pingpong-100-ping-single-buf-fetch-20-net.out  pingpong-alloc-1-io.out  pingpong-alloc-1-net.out  pingpong-io-1-pings-0-workers.out  pingpong-io-1-pings-60.out  pingpong-io-1-pings-vector.out  pingpong-io-1-pings.out  pingpong-io-10-pings-0-workers.out  pingpong-io-10-pings-60.out  pingpong-io-10-pings-vector.out  pingpong-io-10-pings.out  pingpong-io-100-pings-0-workers.out  pingpong-io-100-pings-60.out  pingpong-io-100-pings.out  pingpong-io.out  pingpong-multiple-1-pings-alloc-io.out  pingpong-multiple-1-pings-alloc-net.out  pingpong-multiple-1-pings-io.out  pingpong-multiple-1-pings-net.out  pingpong-multiple-1-pings-vectored-fetch-more-net.out  pingpong-multiple-1-pings-vectored-net.out  pingpong-multiple-10-pings-alloc-io.out  pingpong-multiple-10-pings-alloc-net.out  pingpong-multiple-10-pings-io.out  pingpong-multiple-10-pings-net-proxy.out  pingpong-multiple-10-pings-net.out  pingpong-multiple-10-pings-vectored-fetch-20-net.out  pingpong-multiple-10-pings-vectored-fetch-more-net.out  pingpong-multiple-10-pings-vectored-net.out  pingpong-multiple-100-pings-alloc-io.out  pingpong-multiple-100-pings-alloc-net.out  pingpong-multiple-100-pings-io.out  pingpong-multiple-100-pings-net-proxy.out  (+63 more)
evaluation/regression/: pingpong-tcp-net-10-runs.err
evaluation/results-evening/: pingpong-io-100-pings.err  pingpong-io-100-pings.out  pingpong-net-1-pings.out  pingpong-net-10-pings.out  pingpong-net-100-pings.out
figs/: deserializing_workers.tikz  pingpong-multiple-1.tikz  pingpong-multiple-10.tikz  pingpong-multiple-100.tikz  serializing_workers.tikz  streaming.tikz
header/: accumulator.hpp  dummy_application.hpp  dummy_application_factory.hpp  type_ids.hpp  utility.hpp
src/: accumulator.cpp  application_layer_timing.cpp  benchmark_client.cpp  benchmark_server.cpp  blank_streaming.cpp  blank_streaming_client_server.cpp  blank_streaming_tcp.cpp  blank_streaming_udp.cpp  caf_streaming_tcp.cpp  caf_streaming_udp.cpp  multiple_host_streaming.cpp  pingpong.cpp  pingpong_multiple.cpp  pingpong_raw_tcp.cpp  pingpong_tcp.cpp  pingpong_tcp_blank.cpp  pingpong_tcp_send_time.cpp  pingpong_tcp_timing.cpp  pingpong_udp.cpp  simple_benchmark.cpp  simple_streaming.cpp  streaming_client.cpp  streaming_raw_tcp.cpp  streaming_server.cpp  streaming_tcp.cpp  streaming_udp.cpp  utility.cpp
tikz/: pingpong.tikz  streaming.tikz
